[package]
name = "my-wasm-testing-ts-macros"
version = "0.1.0"
authors = ["adam"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
wasm-bindgen = "0.2.63"
swc_common = "0.11.4"
swc_ecma_parser = "0.66.1"
swc_ecma_ast = "0.49.1"
quote = "1.0"
syn = "1.0.74"
serde_json = "1.0.59"
proc-macro2 = "1.0.24"
unicode-xid = "0.2.2"
