[package]
name = "ts-bindgen-gen"
version = "0.1.0"
description = "Generate a wasm-bindgen interface from a typescript interface."
authors = ["Adam Berger <adam@ratchetdesigns.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
wasm-bindgen = "0.2.63"
swc_common = "0.14.3"
swc_ecma_parser = "0.76.3"
swc_ecma_ast = "0.56.0"
quote = "1.0"
syn = "1.0.74"
serde_json = "1.0.59"
proc-macro2 = "1.0.24"
unicode-xid = "0.2.2"
heck = "0.3.3"
strum_macros = "0.21.1"
enum_to_enum = "0.1.0"

[dev-dependencies]
tempfile = "3.2.0"
proptest = "1.0.0"
