[package]
name = "ts-bindgen-gen"
version = "0.6.0-pre"
description = "Generate a wasm-bindgen interface from typescript definitions"
authors = ["Adam Berger <adam@ratchetdesigns.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/ratchetdesigns/ts-bindgen"
readme = "README.md"
keywords = ["wasm", "bindings", "typescript", "wasm-bindgen", "javascript"]
categories = ["compilers", "command-line-utilities", "development-tools::ffi", "wasm", "web-programming"]

[dependencies]
wasm-bindgen = "0.2.87"
swc_common = "0.14.3"
swc_ecma_parser = "0.76.3"
swc_ecma_ast = "0.56.0"
quote = "1.0"
syn = "1.0.74"
serde_json = "1.0.59"
proc-macro2 = "1.0.24"
unicode-xid = "0.2.2"
heck = "0.3.3"
strum_macros = "0.23.0"
enum_to_enum = "0.1.0"
ts-bindgen-build-support = { version = "=0.6.0-pre", path = "../ts-bindgen-build-support" }

[dev-dependencies]
tempfile = "3.2.0"
proptest = "1.0.0"
