[package]
name = "ts-bindgen-macro"
version = "0.3.0"
description = "Macro to generate a wasm-bindgen interface from typescript definitions"
authors = ["Adam Berger <adam@ratchetdesigns.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false
repository = "https://github.com/ratchetdesigns/ts-bindgen"
readme = "README.md"
keywords = ["wasm", "bindings", "typescript", "wasm-bindgen", "javascript"]
categories = ["compilers", "command-line-utilities", "development-tools::ffi", "wasm", "web-programming"]

[lib]
proc-macro = true

[dependencies]
ts-bindgen-gen = { version = "=0.3.0", path = "../ts-bindgen-gen" }
quote = "1.0"
syn = "1.0.74"

[dev-dependencies]
trybuild = "1.0.25"
