[package]
name = "ts-bindgen-rt"
version = "0.1.0"
description = "Generate a wasm-bindgen interface from a typescript interface."
authors = ["Adam Berger <adam@ratchetdesigns.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
wasm-bindgen = "0.2.63"
js-sys = "0.3.55"
serde_json = "1.0.59"
serde = "1.0"
