[package]
name = "ts-bindgen-web"
version = "0.1.0"
description = "Web interface for generating rust bindings for typescript definitions"
authors = ["Adam Berger <adam@ratchetdesigns.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
yew = "0.19.3"
ts-bindgen = { version = "0.1.0", path = "../ts-bindgen" }

[dependencies.monaco]
version = "0.3.0"
default-features = false
features = ["yew-components"]
git = "https://github.com/siku2/rust-monaco"
rev = "cb20108c317976ba8c3d05b581a84efd394c3dbe"

[dependencies.rustfmt]
package = "rustfmt-nightly"
git = "https://github.com/rust-lang/rustfmt"
rev = "3d9b57a22e85a02edef13b8aff15ab800410ebad"

# would like this to be [patch.crates-io.getrandom] since we don't actually need
# this dependency but want to override a transitive dependency to add the "js"
# feature
[dependencies.getrandom]
version = "^0.2.0"
features = ["js"]
