[package]
name = "ts-bindgen"
version = "0.6.0-pre"
description = "Generate a wasm-bindgen interface from typescript definitions"
authors = ["Adam Berger <adam@ratchetdesigns.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/ratchetdesigns/ts-bindgen"
readme = "README.md"
keywords = ["wasm", "bindings", "typescript", "wasm-bindgen", "javascript"]
categories = ["compilers", "command-line-utilities", "development-tools::ffi", "wasm", "web-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "ts-bindgen"
required-features = ["bin"]

[features]
default = ["bin"]
bin = ["clap", "which"]

[dependencies]
ts-bindgen-gen = { version = "=0.6.0-pre", path = "../ts-bindgen-gen" }
clap = { version = "3.0.1", optional = true, features = ["derive"] }
which = { version = "4.2.2", optional = true }

[target.'cfg(any(target_arch = "wasm32", target_arch = "wasm64"))'.dependencies]
wasm-bindgen = "0.2.87"

[target.'cfg(any(target_arch = "wasm32", target_arch = "wasm64"))'.dev-dependencies]
wasm-bindgen-test = "0.3.37"
