[package]
name = "ts-bindgen-gen-end-to-end-test"
version = "0.1.0"
edition = "2018"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
js-sys = "0.3.53"
console_error_panic_hook = { version = "0.1.6", optional = true }
ts-bindgen-rt = { version = "0.6.0-pre", path = "ts-bindgen-rt" }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
