[package]
name = "ts-bindgen-example-paperjs"
version = "0.6.0-pre"
description = "Example of using ts-bindgen to interface with paper.js"
authors = ["Adam Berger <adam@ratchetdesigns.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/ratchetdesigns/ts-bindgen"
readme = "README.md"
publish = false

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[dependencies]
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"
web-sys = { version = "0.3.64", features = ["Window", "HtmlCanvasElement", "ImageData", "SvgElement", "HtmlImageElement", "CanvasRenderingContext2d", "HtmlScriptElement"] }
ts-bindgen-rt = { version = "0.6.0-pre", path = "../../../ts-bindgen-rt" }
serde = { version = "1.0", features = ["derive"] }
